[tool.poetry]
name = "loganstartoniblog"
version = "0.1.0"
description = ""
authors = ["loganstartoni <logan@startoni.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mkdocs-material = "^9.5.29"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
